syntax = "proto3";
option go_package = "/token";

package server;


message LoginRequest{
  string username=1;
  string password=2;
}
message LoginReply{
  string status=1;
  string token=2;
}
message PingMessage {
  string greeting = 1;
}


service Ping {
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc SayHello(PingMessage) returns (PingMessage) {}
}